# crypto-sentiment

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/auth/: deps.py  jwt.py
backend/app/backtest/: service.py
backend/app/cache/: store.py
backend/app/config/: defaults.yml  settings.py
backend/app/db/: models.py  session.py
backend/app/features/: indicators.py
backend/app/models/: service.py
backend/app/providers/market/: base.py  binance.py
backend/app/providers/social/: base.py  reddit.py  twitter.py
backend/app/sentiment/: service.py
backend/app/utils/: security.py
backend/tests/: test_analyze_integration.py  test_config.py  test_indicators.py  test_sentiment.py
frontend/: package.json  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ChartPanel.tsx
frontend/src/lib/: api.ts
