[project]
name = "sentiment-crypto-lab-backend"
version = "0.1.0"
description = "Crypto sentiment analysis API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "httpx>=0.27.0",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "cryptography>=42.0.7",
  "cachetools>=5.3.3",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.1",
  "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

